# satDeploy

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.sim  LICENSE  PLAN.md  README.md  TODOS.md  docker-compose.yml  docker-setup.sh  plan.md  pyproject.toml  sat.py  sat_agent.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: docker-publish.yml  libcsp-py3-publish.yml  pypi-publish.yml
demo/: demo.tape
demo/v1/: test_app
demo/v2/: test_app
docs/: building.md  commands.md  configuration.md  docker-dev-guide.md
docs/designs/: demo-mode-dx.md  vercel-for-cubesats.md
docs/feasibility/: week1-agent-pair-batch.json  week1-results.md
experiments/: README.md  analyze_bird_sweep.py  burstiness_analysis.py  diag_one_trial.sh  diff_stress_test.py  harness.sh  loss-pattern-format.md  sweep_bird_patterns.sh  sweep_loss_rates.sh  sweep_tail_race.sh  test_e2e_bird_pattern.sh  test_loss_filter_actions.sh
experiments/lib/: agent_lifecycle.sh  csh_driver.sh  fixtures.sh  impair.py  metrics.sh  netem.sh  parse_pass_log.py  test_parse_pass_log.py  transport.sh
experiments/libdtp-bare-test/: .gitignore  README.md  meson.build
experiments/libdtp-bare-test/results/: bare_tail_race.csv
experiments/libdtp-bare-test/scripts/: sweep.sh
experiments/libdtp-bare-test/src/: client.c  csp_init.c  csp_init.h  mini_zmqproxy.c  server.c
experiments/runs/: e1_baseline.sh  e2_loss_curve.sh  e4_resume.sh
init/: can.csh  kiss.csh  zmq.csh
meta-satdeploy/: README.md
meta-satdeploy/conf/: layer.conf
meta-satdeploy/recipes-connectivity/satdeploy-agent/: satdeploy-agent_git.bb
notes/features/: clean-refactor.md  error-warning-prefixes.md  list-backup-bug.md  phase4-polish.md  polish-cli-output.md  readme-documentation.md  refactor-carmack-cleanup.md  remove-dead-deployer-code.md  rollback-by-hash.md  rollback-dial.md  rollback.md  sat-agent-deploy.md  week-1-init-push-status.md  week-3-logs-history-errors.md
satdeploy/: __init__.py  __main__.py  abi.py  audit.py  cli.py  config.py  debuginfod.py  demo.py  deployer.py  doctor.py  errors.py  fleet.py  hash.py  history.py  iterate.py  output.py  provenance.py  services.py  ssh.py  templates.py  validate.py  watch.py
satdeploy-agent/: meson.build
satdeploy-agent/include/: loss_filter.h  loss_filter.integration.md  satdeploy_agent.h  session_state.h  sha256.h
satdeploy-agent/proto/: deploy.pb-c.c  deploy.pb-c.h  deploy.proto
satdeploy-agent/src/: app_metadata.c  backup_manager.c  deploy_handler.c  dtp_client.c  loss_filter.c  loss_filter_iface_hook.c  main.c  session_state.c  sha256.c
satdeploy-apm/: meson.build
satdeploy-apm/lib/: param
satdeploy-apm/src/: config.c  config.h  deploy.pb-c.c  deploy.pb-c.h  deploy.proto  dtp_log_quiet.c  history.h  output.c  output.h  satdeploy_apm.c
satdeploy/csp/: __init__.py  dtp_server.py
satdeploy/csp/proto/: __init__.py  deploy.proto  deploy_pb2.py
satdeploy/dashboard/: app.py
satdeploy/dashboard/static/: style.css
satdeploy/dashboard/templates/: iteration.html
satdeploy/transport/: __init__.py  base.py  csp.py  local.py  ssh.py
scripts/: dev-shell.sh  docker-dev.sh  run-container-build.sh
tests/: test_abi.py  test_audit.py  test_cli_fleet.py  test_cli_init.py  test_cli_list.py  test_cli_logs.py  test_cli_push.py  test_cli_rollback.py  test_cli_status.py  test_cli_target.py  test_cli_transport.py  test_config.py  test_dashboard_iteration.py  test_dashboard_rollback.py  test_debuginfod.py  test_demo.py  test_deployer.py  test_doctor.py  test_errors.py  test_fleet.py  test_hash.py  test_history.py  test_iterate.py  test_output.py  test_provenance.py  test_push_list_integration.py  test_push_requires_validated.py  test_sat.py  test_sat_agent.py  test_services.py  test_ssh.py  test_templates.py  test_transport_base.py  test_transport_csp.py  test_transport_ssh.py  test_validate.py  test_watch.py
