[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "satdeploy"
version = "0.3.4"
description = "Deployment tool for embedded Linux satellites — push, track, rollback over SSH and CSP"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Mahmood Seoud"}]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "paramiko>=3.0",
    "pyyaml>=6.0",
    "pyzmq>=25.0",
    "protobuf>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.scripts]
satdeploy = "satdeploy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["satdeploy", "satdeploy.*"]
exclude = ["tests*", "satdeploy-agent*", "satdeploy-apm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: tests requiring running demo environment (Docker + zmqproxy + agent)",
]
