[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "satdeploy"
version = "0.4.0"
description = "Deployment tool for embedded Linux satellites — push, track, rollback over SSH"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Mahmood Seoud"}]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "paramiko>=3.0",
    "pyyaml>=6.0",
    "bsdiff4==1.2.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.0",
    "slowapi>=0.1.9",
    "watchdog>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "httpx>=0.27",
]

[project.scripts]
satdeploy = "satdeploy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["satdeploy", "satdeploy.*"]
exclude = ["tests*", "satdeploy-agent*", "satdeploy-apm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: tests requiring running demo environment",
]
